yamls/ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
    version: v1
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
      version: v1
  template:
    metadata:
      labels:
        app: ui
        version: v1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/cpat-blog/cpat-blog-client:0ad2ec7
        imagePullPolicy: Always
        name: ui
        ports:
        - containerPort: 3000
