yamls/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
spec:
  type: NodePort
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  selector:
    app: ui
