yamls/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ui
  name: ui
spec:
  path: /
  to:
    kind: Service
    name: example
  port:
    targetPort: "8080"
